--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,43 @@
-Django==2.2.3
-django-uploadstatic==0.3.0
-ez-setup==0.9
+ansible==2.5.1
+apache-libcloud==2.2.1
+asn1crypto==0.24.0
+certifi==2018.1.18
+chardet==3.0.4
+cryptography==2.1.4
+Django==1.11.22
+django-debug-toolbar==1.11
+enum34==1.1.6
+gyp==0.1
+httplib2==0.9.2
+idna==2.6
+ipaddress==1.0.17
+Jinja2==2.10
+jmespath==0.9.3
+keyring==10.6.0
+keyrings.alt==3.0
+lockfile==0.12.2
+markdown2==2.3.8
+MarkupSafe==1.0
+mysqlclient==1.4.2.post1
+netaddr==0.7.19
+paramiko==2.0.0
 Pillow==6.1.0
+pyasn1==0.4.2
+pycrypto==2.6.1
+pygobject==3.26.1
+pykerberos==1.1.14
+pymongo==3.8.0
+pyOpenSSL==17.5.0
 pytz==2019.1
+pyxdg==0.25
+PyYAML==3.12
+requests==2.18.4
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.11.0
 sqlparse==0.3.0
+urllib3==1.22
+vboxapi==1.0
+virtualenv==16.7.1
+xmltodict==0.11.0
+zabbix-api==0.5.4
